--- a/Sprint 1/Principal/Mi cuenta/index.html
+++ b/Sprint 1/Principal/Mi cuenta/index.html
@@ -13,6 +13,7 @@
     <main>
       <h2>Información personal</h2>
       <form>
+        <label for="puntosTotal">Total de puntos acumulados: 0</label>
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre" value="">
         <br>
